# text2sql-eval

./: .env.example  .gitignore  Dockerfile.ci  Makefile  README.md  docker-compose.ci.yml  main.py  pyproject.toml
config/: config.yaml
config/prompts/: README.md  track_a.txt  track_b.txt  track_c.txt
data/: dev.json
data/rag_index/: chroma.sqlite3  manifest.json
docs/: plan.md  prompts.md  run-artifact.md  track-b-plan.md  track-c-plan.md  track-c-rag-infra-plan.md
docs/rag/: README.md  analyst-onboarding.md  customer-account-relationships.md  financial_schema.md  lending-and-regional-reporting.md  payments-and-activity-notes.md
mini-dev/pt-br/database_description/: account.csv  card.csv  client.csv  disp.csv  district.csv  financial_schema.md  loan.csv  order.csv  trans.csv
notebooks/: financial_database_pt_br.ipynb  run_experiment_from_notebook.ipynb
results/20260421-192726/: schema_context.json
scripts/: install-hooks.sh  pre-commit
src/text2sql_eval/: __init__.py  app.py  cli.py  config.py
src/text2sql_eval/dataset/: __init__.py  loader.py  models.py  schema.py
src/text2sql_eval/evaluator/: __init__.py  error_classifier.py  execution_accuracy.py
src/text2sql_eval/executor/: __init__.py  sql_executor.py
src/text2sql_eval/llm/: __init__.py  anthropic_provider.py  base.py  fake_provider.py  maritaca_provider.py  openai_provider.py  registry.py
src/text2sql_eval/pipeline/: __init__.py  normalization.py  runner.py
src/text2sql_eval/prompts/: __init__.py  loader.py
src/text2sql_eval/rag/: __init__.py  builder.py  chroma_store.py  chunking.py  config.py  corpus.py  models.py  retriever.py
src/text2sql_eval/results/: __init__.py  reporter.py  schema.py
src/text2sql_eval/tracks/: __init__.py  base.py  registry.py  track_a.py  track_b.py  track_c.py
tests/: test_app.py  test_cli.py  test_config.py  test_dataset_loader.py  test_dataset_schema.py  test_error_classifier.py  test_execution_accuracy.py  test_integration_local_pipeline.py  test_integration_prompt_templates.py  test_llm.py  test_pipeline_artifact_contract.py  test_pipeline_normalization.py  test_pipeline_runner.py  test_prompt_loader.py  test_rag.py  test_reporter.py  test_results_schema.py  test_sql_executor.py  test_tracks.py
