[project]
name = "text2sql-eval"
version = "0.1.0"
description = "Evaluation harness for Text-to-SQL LLM contextualization strategies"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.25",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
text2sql-eval = "text2sql_eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text2sql_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
