[project]
name = "text2sql-eval"
version = "0.1.0"
description = "Evaluation harness for Text-to-SQL LLM contextualization strategies"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.25",
    "chromadb>=0.5",
    "rich>=13.0",
    "deep-translator>=1.11.4",
]

[project.scripts]
text2sql-eval = "text2sql_eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text2sql_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["notebooks", "mini-dev"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "bandit>=1.8",
    "pip-audit>=2.7",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
]
